Test/git-issues/git-issue-666.dfy.expect
git-issue-666.dfy(67,13): Error: member 'F' does not exist in trait 'object'
1 resolution/type errors detected in git-issue-666.dfy
